# wand

./: .ai-training-opt-out  .autopep8  .dockerignore  .env.example  .gitignore  .noai  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DO_NOT_TRAIN.md  Dockerfile  INSTALLATION.md  LICENSE  Makefile  README.md  README_DISTRIBUTED.md  SECURITY.md  add_to_claude.sh  ai_framework_registry.py  ci.sh  claude_desktop_config.json  config.json  config.py  config.sample.json  config.yaml  distributed_server.py  docker-compose.privileged.yml  docker-compose.workspace.yml  enhanced_distributed_server.py  integrations.py  integrations_config.py  main.py  mcp_stdio_wrapper.py  openapi.yaml  opencode-config.json  opencode.config.json  opencode.json  pyproject.toml  (+20 more)
.github/workflows/: ci.yml
agents/: __init__.py  agent.py  haystack_agent.py  llamaindex_agent.py  tools.py
analytics/: __init__.py  aggregators.py  collectors.py  reporters.py
api/: batch_processing.py  database.py  framework_routers.py  health_endpoints.py  saas_endpoints.py  saas_integration.py  search.py  search_examples.py  server.py
benchmarking/: __init__.py  framework_benchmark.py
caching/: __init__.py  response_cache.py
config/: __init__.py  agent_template.json  manager.py  orchestrator.json  secrets.py  settings.py  wand-privileged.json  wand-workspace.json
core/: __init__.py  task_manager.py
database/: __init__.py  connection.py  init.py  migrations.py  models.py  repositories.py
database/migrations/: 20250802_120000_initial_schema.py  __init__.py  manager.py
deployment/kubernetes/: configmap.yaml  mcp-api.yaml  namespace.yaml  postgres.yaml
deployment/nginx/: nginx.conf
deployment/prometheus/: prometheus.yml
deployment/scripts/: deploy.sh
distributed/: __init__.py  agent.py  types.py
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  CONFIGURATION_GUIDE.md  ENTERPRISE_INTEGRATIONS.md  INTEGRATIONS.md  QUICK_START.md  README.md  openapi-old-multiframework.yaml
docs/archive/: API_DESIGN.md  API_REQUIREMENTS.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_HAYSTACK.md  COMPREHENSIVE_TEST_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_README.md  DOCUMENTATION_SUMMARY.md  FUTURE_ENHANCEMENTS.md  (+9 more)
examples/: .env.example  api_examples.sh  claude_code_examples.sh  claude_desktop_config.json  demo_client.py  framework_comparison_example.py  opencode_config.json  simple_mcp_server.py  simple_test.py
grpc_services/: __init__.py  agent_service.py  coordinator_service.py  haystack_service.py  integration_service.py  llamaindex_service.py
integrations/: __init__.py  legacy.py
monitoring/: __init__.py  framework_monitor.py  integration_health_monitor.py
nginx/: nginx.conf
observability/: __init__.py  enhanced_logging.py  log_management.py  logging.py
orchestrator/: __init__.py  agent_orchestrator.py  orchestrator.py
protos/: agent.proto
rest_api/: __init__.py  gateway.py  models.py
scripts/: Dockerfile  Dockerfile.mcp  deploy-host-agent.sh  deploy-production.sh  deploy-quick.sh  docker-build.sh  docker-compose.dev.yml  docker-compose.mcp.yml  docker-compose.simple.yml  docker-compose.yml  generate_grpc.py  init-db.sql  start-wand-privileged.sh  validate-production.sh
security/: __init__.py  auth.py  rate_limiter.py  validator.py
tests/: __init__.py  conftest.py  fixtures.py  test_architecture.py  test_ci_smoke.py  test_complete_system.py  test_config.py  test_distributed_server.py  test_docker_socket.py  test_enterprise_integrations.py  test_enterprise_integrations_basic.py  test_enterprise_integrations_simple.py  test_grpc_orchestration.py  test_host_agent.py  test_integration_full.py  test_internal_agents.py  test_mcp_client.py  test_multi_framework_api.py  test_opencode_integration.py  test_orchestrator.py  test_process_manager.py  test_real_agents.py  test_server.py  test_ssh_remote.py
tools/: __init__.py
transport/: __init__.py  grpc_agent.py  internal_agent.py  mcp_http.py  mcp_sse.py
utils/: __init__.py  error_handling.py
websocket/: __init__.py  event_manager.py  health_websocket.py
(+100 files in other folders)
