[project]
name = "mcp-distributed-server"
version = "2.1.0"
description = "A distributed MCP server with multi-agent system and comprehensive integrations"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.1.0",
    "aiohttp>=3.9.0",
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
]
integrations = [
    "slack-sdk>=3.26.0",
    "PyGithub>=2.1.0",
    "python-jenkins>=1.8.0",
    "boto3>=1.34.0",
    "psycopg[binary]>=3.1.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
]
all = [
    "mcp-distributed-server[dev]",
    "mcp-distributed-server[integrations]",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "."]
python_files = "test_*.py"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true