[project]
name = "wand"
version = "3.0.0"
description = "Magical Multi-Agent Protocol Server with 50+ AI integrations"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.1.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "aiohttp>=3.9.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "pytest-grpc>=0.8.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "autopep8>=2.0.0",
    "pre-commit>=3.5.0",
]
audio = [
    "pyaudio>=0.2.11",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "openai-whisper>=20231117",
    "speechrecognition>=3.10.0",
    "pyttsx3>=2.90",
    "gTTS>=2.4.0",
]
multimedia = [
    "ffmpeg-python>=0.2.0",
    "opencv-python>=4.8.0",
    "opencv-contrib-python>=4.8.0",
    "imageio>=2.31.0",
    "qrcode[pil]>=7.4.0",
    "python-barcode[images]>=0.15.0",
    "pytesseract>=0.3.10",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "plotly>=5.0.0",
]
ai = [
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "torch>=2.0.0",
    "cohere>=4.32.0",
    "replicate>=0.18.0",
    "stability-sdk>=0.8.0",
    "haystack-ai>=2.6.0",
    "sentence-transformers>=2.2.0",
    "llama-index>=0.9.0",
]
enterprise = [
    "simple-salesforce>=1.12.0",
    "hubspot-api-client>=8.1.0",
    "stripe>=7.7.0",
    "jira>=3.5.0",
    "asana>=3.2.0",
    # Identity Management
    "pysnc>=1.1.6",  # ServiceNow
    "msal>=1.24.0",  # Microsoft Authentication
    "msgraph-sdk>=1.0.0",  # Microsoft Graph
    "azure-identity>=1.14.0",  # Azure Identity
    "britive>=2.0.0",  # Britive PAM
    # Communication
    "pymsteams>=0.2.2",  # Microsoft Teams
]
monitoring = [
    "prometheus-client>=0.19.0",
    "psutil>=5.9.0",
    "structlog>=23.2.0",
]
all = [
    "wand[dev]",
    "wand[audio]",
    "wand[multimedia]",
    "wand[ai]",
    "wand[enterprise]",
    "wand[monitoring]",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "."]
python_files = "test_*.py"

[tool.black]
line-length = 120
target-version = ['py310']
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.autopep8]
max_line_length = 120
aggressive = 2
ignore = ["E501", "W503", "E203"]
exclude = ".git,__pycache__,venv,.venv,migrations,generated,protos,*.egg-info,build,dist"
in-place = true
pep8_passes = 2000
